--- a/LIS_861_Spring_2014/assignments/web_site_version_1.html
+++ b/LIS_861_Spring_2014/assignments/web_site_version_1.html
@@ -101,7 +101,7 @@ title: UW LIS 861 &mdash; Information Architecture (Spring 2014) &mdash; Web sit
         
         <ul>
           <li>
-            Validate for XHTML or HTML5, using <a href="validator.w3.org">
+            Validate for XHTML or HTML5, using <a href="http://validator.w3.org">
             validator.w3.org</a>.
           </li>
           <li>
