clarifying comment requirement

--- a/LIS_861_Spring_2014/assignments/web_site_version_1.html
+++ b/LIS_861_Spring_2014/assignments/web_site_version_1.html
@@ -123,7 +123,13 @@ title: UW LIS 861 &mdash; Information Architecture (Spring 2014) &mdash; Web sit
             as appropriate to your content).
           </li>
           <li>
-            Include a relevant and clear comment.
+            Include a relevant and clear comment. (HTML comments start with
+            <code>&lt;!--</code> and end with <code>--&gt;</code>. In between,
+            they should say something about your structure or content that will
+            be helpful to future developers - e.g. labeling where sections start
+            and end (this can become unclear with complicated structures) or
+            explaining why you made particular choices, especially if you had
+            to think for a while about what the right choice was.)
           </li>
           <li>
             Link to an external stylesheet in the <code>head</code> &mdash; no
