needs number of people

--- a/LIS_861_Spring_2014/assignments/final_project.html
+++ b/LIS_861_Spring_2014/assignments/final_project.html
@@ -39,7 +39,7 @@ title: UW LIS 861 &mdash; Information Architecture (Spring 2014) &mdash; Web sit
         
         <p>
           This is a group project; your group can divide the labor in any way
-          that seems fair to you.
+          that seems fair to you.  Your group should have 4-ish people.
         </p>
         
         <h3>Why do we do this?</h3>
