--- a/Intro-via-jQuery/index.html
+++ b/Intro-via-jQuery/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Introduction to Programming Concepts via jQuery</title>
 
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-custom/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css" type="text/css">
 
     <link href='http://fonts.googleapis.com/css?family=PT+Sans|Enriqueta:700' rel='stylesheet' type='text/css'>
