--- a/Intro-via-jQuery/functions.html
+++ b/Intro-via-jQuery/functions.html
@@ -1273,10 +1273,26 @@ MAKE SURE YOU HAVE ALREADY INTRODUCED....
               </ul>
 
             </div>
+
+          <!-- begin previous/next buttons -->
+          <div>
+            <a class="pull-left btn btn-lg prev-next" href="loops.html">
+              <span class="glyphicon glyphicon-arrow-left"></span>
+              previous
+            </a>
+
+            <a class="pull-right btn btn-lg prev-next" href="next.html">
+              next
+              <span class="glyphicon glyphicon-arrow-right"></span>
+            </a>
+          </div>
+          <!-- end previous/next buttons -->
+
         </div>
         <!-- end main content div -->
       </div>
       <!-- end main row div -->
+
     </div>
     <!-- end main container div -->
     
@@ -1286,11 +1302,15 @@ MAKE SURE YOU HAVE ALREADY INTRODUCED....
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <p>
-              <a href="http://andromedayelton.com">Andromeda Yelton</a> <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014 <span class="glyphicon glyphicon-star"></span>
+              <a href="http://andromedayelton.com">Andromeda Yelton</a>
+              <span class="glyphicon glyphicon-star"></span>
+              DLF/Code4Lib DC 2014
+              <span class="glyphicon glyphicon-star"></span>
               <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
+              <span class="glyphicon glyphicon-star"></span>
+              <a href="https://api.jquery.com/">jQuery documentation</a>
             </p>
           </div>
         </div>
