--- a/Intro-via-jQuery/index.html
+++ b/Intro-via-jQuery/index.html
@@ -63,11 +63,15 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <p>
-              <a href="http://andromedayelton.com">Andromeda Yelton</a> <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014 <span class="glyphicon glyphicon-star"></span>
-              <a href="https://github.com/thatandromeda/courseware/tree/gh-pages/Intro-via-jQuery">Source files</a> 
+              <a href="http://andromedayelton.com">Andromeda Yelton</a>
+              <span class="glyphicon glyphicon-star"></span>
+              DLF/Code4Lib DC 2014
+              <span class="glyphicon glyphicon-star"></span>
+              <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
+              <span class="glyphicon glyphicon-star"></span>
+              <a href="https://api.jquery.com/">jQuery documentation</a>
             </p>
           </div>
         </div>
