--- a/Intro-via-jQuery/loops.html
+++ b/Intro-via-jQuery/loops.html
@@ -628,6 +628,20 @@ applying a jquery function to an entire selector - use same example.
           </div>
           <!-- end feedback div -->
     
+          <!-- begin previous/next buttons -->
+          <div>
+            <a class="pull-left btn btn-lg prev-next" href="conditionals.html">
+              <span class="glyphicon glyphicon-arrow-left"></span>
+              previous
+            </a>
+
+            <a class="pull-right btn btn-lg prev-next" href="functions.html">
+              next
+              <span class="glyphicon glyphicon-arrow-right"></span>
+            </a>
+          </div>
+          <!-- end previous/next buttons -->
+
         </div>
         <!-- end main content div -->
       </div>
@@ -641,11 +655,15 @@ applying a jquery function to an entire selector - use same example.
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <p>
-              <a href="http://andromedayelton.com">Andromeda Yelton</a> <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014 <span class="glyphicon glyphicon-star"></span>
+              <a href="http://andromedayelton.com">Andromeda Yelton</a>
+              <span class="glyphicon glyphicon-star"></span>
+              DLF/Code4Lib DC 2014
+              <span class="glyphicon glyphicon-star"></span>
               <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
+              <span class="glyphicon glyphicon-star"></span>
+              <a href="https://api.jquery.com/">jQuery documentation</a>
             </p>
           </div>
         </div>
