--- a/Intro-via-jQuery/conditionals.html
+++ b/Intro-via-jQuery/conditionals.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap-custom/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/custom.css" type="text/css">
 
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans|Enriqueta:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans|Enriqueta:700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
