--- a/Intro-via-jQuery/conditionals.html
+++ b/Intro-via-jQuery/conditionals.html
@@ -811,6 +811,12 @@
             </div>
             <!-- end example 4 -->
 
+            <p>
+              In the following two examples, your code will run all at once
+              when you press the "Run code" button &mdash; you don't need to press
+              each list item individually.
+            </p>
+
             <!-- begin example 5 -->
             <div class="well clearfix">
               <p class="lead lead-grey">
