--- a/Intro-via-jQuery/functions.html
+++ b/Intro-via-jQuery/functions.html
@@ -388,15 +388,14 @@
               </li>
               <li>
                 Write a function that makes the trigger-2-target div turn 
-                orange, if its background color is #7d3c75 (this page's 
-                purple), when you click trigger-2. (If your browser is using
-                rgb instead of hex, check for rgb(125, 60, 117).)
+                orange if it's currently purple when you click trigger-2. 
+                (Remember <code>bg-orange</code> and <code>bg-purple</code>
+                are the class names that govern background colors in my
+                stylesheet.)
               </li>
               <li>
                 Write a function that makes the trigger-3-target div turn 
-                orange, if its background color is #b2b84a (this page's 
-                green), when you click trigger-3. (If your browser is using
-                rgb instead of hex, check for rgb(178, 184, 74).)
+                orange if it's green when you click trigger-3.
               </li>
             </ol>
 
