--- a/Intro-via-jQuery/intro.html
+++ b/Intro-via-jQuery/intro.html
@@ -608,11 +608,12 @@
             </p>
             
             <p>
-              One last handy function:
+              One last handy function (press enter after each line):
             </p>
 <pre>
 <code class="code-big">
   $j('#html-example').html();
+
   $j('#html-example-2').html();
 </code>
 </pre>
@@ -661,6 +662,34 @@
 test all the examples (again)
 
 look at how you've handled $j(this)
+
+add chevron image by word "chevron" in dev instructions
+
+look for the word "instance", define if needed
+
+"documentation for .append()": apply code highlighting
+
+make sure you explained "arguments" - you define in functions.html but
+use earlier
+
+make sure you have talked clearly enough about selectors - how do you
+find the div whose ID is foo?
+
+define "bind" and "event handler" and maybe try to suck less about them
+
+check for noConflict() reminder passim
+
+"appends their contents to the #trigger-5-results-div. "  - make sure you have
+covered how to append to a specific div
+also in that page make sure people are testing for classes, not background
+colors/hex colors
+
+"funciton"
+
+be more explicit about CSS prerequisite and provide some online and
+your-friends fallback options
+
+add medium article somewhere
 -->
           <!-- begin previous/next buttons -->
           <div>
