typo fix. thanks, TA Dan

--- a/Intro-via-jQuery/loops.html
+++ b/Intro-via-jQuery/loops.html
@@ -337,7 +337,7 @@ applying a jquery function to an entire selector - use same example.
             </p>
             
             <p>
-              (As ever, you can read complete documentation for .append( )
+              (As ever, you can read complete documentation for <code>.append( )</code>
               at <a href="http://api.jquery.com/append/">http://api.jquery.com/append/</a>.)
             </p>
 
@@ -389,7 +389,7 @@ applying a jquery function to an entire selector - use same example.
   $j(".conditional-loops-1").each(function() {
     if ( $j(this).hasClass("bg-yellow") ) {
       $j(this).removeClass("bg-yellow").addClass("bg-green");
-    } else if ( $j(this)hasClass("bg-green") ) {
+    } else if ( $j(this).hasClass("bg-green") ) {
       $j(this).removeClass("bg-green").addClass("bg-yellow");
     };
   });
