--- a/Intro-via-jQuery/next.html
+++ b/Intro-via-jQuery/next.html
@@ -43,6 +43,16 @@
           <!-- begin more learning div -->
           <div>
             <h2>Learning more after today</h2>
+            
+            <p>
+              Want to learn more code after today? Yay!  Here are the two
+              things that people tell me, over and over, are the most 
+              important things:
+            </p>
+            
+            <ul>
+              <li>
+            </ul>
           </div>
           <!-- end more learning div -->
 
