syntax fix (thanks, shana)

--- a/Intro-via-jQuery/loops.html
+++ b/Intro-via-jQuery/loops.html
@@ -557,6 +557,12 @@ applying a jquery function to an entire selector - use same example.
                 writing the code, or it'll be easiest for you to answer the
                 question with some learning-by-doing, go right ahead!)
               </li>
+              <li>
+                Note: the ID of the holds-list div below is <code>holds-list-2</code>.
+                (It needs to be different from the ID of the holds list div
+                above, because we can only have one object with a given ID
+                per page.)
+              </li>
             </ul>
 
             <div class="well">
@@ -596,7 +602,7 @@ applying a jquery function to an entire selector - use same example.
                 </div>
                 <div class="col-md-6">
                   <h4>Holds list</h4>
-                  <div id="holds-list">
+                  <div id="holds-list-2">
                   </div>
                 </div>
               </div>
