changes not propagating on github, weird

--- a/Intro-via-jQuery/loops.html
+++ b/Intro-via-jQuery/loops.html
@@ -563,40 +563,45 @@ applying a jquery function to an entire selector - use same example.
                 above, because we can only have one object with a given ID
                 per page.)
               </li>
+              <li>
+                It also uses <code>practice-loops-2</code> instead of
+                <code>practice-loops</code> to avoid interactions with
+                the previous example.
+              </li>
             </ul>
 
             <div class="well">
               <div class="row">
                 <div class="col-md-6">
                   <h4>Titles list (messy data)</h4>
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Leviathan Wakes</em>; Author: James S.A. Corey
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>The Hundred Thousand Kingdoms</em>; Author: N.K. Jemisin
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Caliban's War</em>; Author: James S. A. Corey
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Fire Upon the Deep</em>; Author: Vernor Vinge
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Cibola Burn</em> by James S.A. Corey
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>The Broken Kingdoms</em>; Author: N.K. Jemisin
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Who Fears Death</em>; Author: Nnedi Okorafor
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Abbadon's Gate</em>; Author: James S.a. Corey
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>The Kingdom of Gods</em>; Author: N.K. Jemisin
                   </span><br />
-                  <span class="practice-loops">
+                  <span class="practice-loops-2">
                     Title: <em>Rainbows End</em>; Author: Vernor Vinge
                   </span><br />
                 </div>
