typo (thanks christopher)

--- a/Intro-via-jQuery/next.html
+++ b/Intro-via-jQuery/next.html
@@ -245,7 +245,7 @@
 
             <ul>
               <li>
-                Write a function that makes <code>#loop-trigger-1</code> 
+                Write a function that makes <code>#trigger-1</code> 
                 change the buttons to purple if they're yellow, and then
                 change back to yellow if they're purple.  (You can do this
                 with the functions you've already encountered; you might
@@ -254,7 +254,7 @@
                 page) for details.
               </li>
               <li>
-                Write a function that makes <code>#loop-trigger-1</code>
+                Write a function that makes <code>#trigger-1</code>
                 change every <em>other</em> button purple.  This is the kind
                 of logic that comes up a lot in web development (e.g. where
                 you might want to color every other line of a table). A few
@@ -288,6 +288,7 @@
 
             <ul>
               <li>
+                (not yet written. sadface!)
               </li>
             </ul>
             <!-- end loops redux -->
