updating for nercomp

--- a/Intro-via-jQuery/functions.html
+++ b/Intro-via-jQuery/functions.html
@@ -106,11 +106,11 @@
             </p>
         
             <p>
-              We're going to make it fancier. But first, let's define a
-              term.  <em>Arguments</em> are the inputs to a function (highlighted
-              in purple above).  Arguments give a function information about
-              what it should be doing and how to do it.  What are these
-              arguments telling this function?
+              We're going to make it fancier. But first, let's refresh our
+              memory.  <em>Arguments</em> are the inputs to a function
+              (highlighted in purple above).  Arguments give a function
+              information about what it should be doing and how to do it.
+              What are these arguments telling this function?
             </p>
         
             <p>
@@ -175,7 +175,7 @@
               to handle particular events &mdash; what to do when 
               specific things happen. The event you'll see handled most often 
               is <code>click</code>; we'll be telling the browser what to
-              do when people click on things. Other javascript events
+              do when people click on things. Other JavaScript events
               include <code>mouseenter</code>, <code>mouseleave</code>,
               <code>submit</code>, <code>keypress</code>...various ways
               people can interact with browser content. You can read more
@@ -1324,9 +1324,9 @@ MAKE SURE YOU HAVE ALREADY INTRODUCED....
             <p>
               <a href="http://andromedayelton.com">Andromeda Yelton</a>
               <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014
+              EDUCAUSE-NERCOMP June 2015
               <span class="glyphicon glyphicon-star"></span>
-              <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
+              <a href="https://github.com/thatandromeda/courseware/tree/gh-pages/Intro-via-jQuery">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
               <span class="glyphicon glyphicon-star"></span>
