--- a/Intro-via-jQuery/next.html
+++ b/Intro-via-jQuery/next.html
@@ -57,7 +57,10 @@
                 and you'll have more fun. It doesn't matter if it's a work
                 project or a personal one, or something you build from
                 scratch vs. something you modify &mdash; it just needs to be
-                a real thing.
+                a real thing. Need ideas? I wrote
+                <a href="https://thatandromeda.github.io/ltr/">a whole Library
+                Technology Report</a> about short programs librarians have
+                written to get real-world things done.
               </li>
               <li>
                 <strong>Mentors.</strong> It's good to have people who can
@@ -124,8 +127,8 @@
             </ul>
 
             <p>
-              In terms of programming language choice &mdash; honestly I 
-              think this should not be your major question. Languages all
+              In terms of programming language choice &mdash; honestly 
+              this should not be your major question. Languages all
               involve the same core concepts; if you solidly master one,
               a second will be dramatically easier to learn. People definitely
               have languages that play more or less to their personal tastes,
@@ -377,9 +380,6 @@
               </li>
               <li>
                 Heck &mdash; make <em>your</em> catalog look better.
-                Or if you're frustrated by the limitations of your
-                third-party software, make yourself feel better by doing
-                horrible things to it with jQuery. That's cool too.
               </li>
             </ul>
             
@@ -494,9 +494,9 @@ Reskin a real catalog site (extra good for working together)
             <p>
               <a href="http://andromedayelton.com">Andromeda Yelton</a>
               <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014
+              EDUCAUSE-NERCOMP June 2015
               <span class="glyphicon glyphicon-star"></span>
-              <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
+              <a href="https://github.com/thatandromeda/courseware/tree/gh-pages/Intro-via-jQuery">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
               <span class="glyphicon glyphicon-star"></span>
