--- a/Intro-via-jQuery/conditionals.html
+++ b/Intro-via-jQuery/conditionals.html
@@ -188,7 +188,7 @@
               another string.  And <mark>argument</mark> is a new term, so
               let's define it! An argument is an input that you stick into
               a function, and in many programming languages arguments go
-              inside the parentheses that follow functions.  Some functions
+              inside the parentheses that follow function names.  Some functions
               (like <code>noConflict()</code>) don't take any arguments.
               Others take one, or several. Arguments may be optional (in 
               which case the function will do something logical whether or
@@ -415,7 +415,7 @@
 
   'banana'.split(2)
   
-  var myBanana = 'banana'
+  var myBanana = 'banana';
   
   myBanana.split('a')
 </code>
@@ -939,6 +939,30 @@
           </div>
           <!-- begin if/else practice-->
 
+          <!-- begin feedback div -->
+          <div>
+            <h3>I <span class="glyphicon glyphicon-heart"></span> feedback</h3>
+            
+            <p>
+              Before you leave this room, grab two post-it notes.
+              Write on them:
+            </p>
+
+            <ul>
+              <li>
+                Something that worked well for you today
+              </li>
+              <li>
+                Something that could be working better
+              </li>
+            </ul>
+            
+            <p>
+              Stick them in the feedback space before you leave the room.
+            </p>
+          </div>
+          <!-- end feedback div -->
+
           <!-- begin previous/next buttons -->
           <div>
             <a class="pull-left btn btn-lg prev-next" href="intro.html">
@@ -968,9 +992,9 @@
             <p>
               <a href="http://andromedayelton.com">Andromeda Yelton</a>
               <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014
+              EDUCAUSE-NERCOMP June 2015
               <span class="glyphicon glyphicon-star"></span>
-              <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
+              <a href="https://github.com/thatandromeda/courseware/tree/gh-pages/Intro-via-jQuery">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
               <span class="glyphicon glyphicon-star"></span>
