--- a/Intro-via-jQuery/index.html
+++ b/Intro-via-jQuery/index.html
@@ -65,9 +65,9 @@
             <p>
               <a href="http://andromedayelton.com">Andromeda Yelton</a>
               <span class="glyphicon glyphicon-star"></span>
-              DLF/Code4Lib DC 2014
+              EDUCAUSE-NERCOMP June 2015
               <span class="glyphicon glyphicon-star"></span>
-              <a href="https://github.com/thatandromeda/bootstrap-tutorial/tree/gh-pages">Source files</a> 
+              <a href="https://github.com/thatandromeda/courseware/tree/gh-pages/Intro-via-jQuery">Source files</a> 
               <span class="glyphicon glyphicon-star"></span> 
               <a href="http://design-seeds.com/index.php/home/entry/color-abstract1">Color scheme</a>
               <span class="glyphicon glyphicon-star"></span>
