--- a/Intro-via-jQuery/functions.html
+++ b/Intro-via-jQuery/functions.html
@@ -1176,6 +1176,15 @@ MAKE SURE YOU HAVE ALREADY INTRODUCED....
 .split()
 
 -->
+          <!-- begin feedback div -->
+          <div>
+            <h3>NERCOMP <span class="glyphicon glyphicon-heart"></span> feedback</h3>
+            
+            <p>
+              Please fill out the <a href="http://bit.ly/nercomp_jquery">feedback survey</a>.
+            </p>
+          </div>
+          <!-- end feedback div -->
         
             <div>
               <h3>Troubleshooting!</h3>
@@ -1339,7 +1348,7 @@ MAKE SURE YOU HAVE ALREADY INTRODUCED....
     <!-- end footer -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
